# rustplay

./: Cargo.toml
.cargo/: config.toml
benches/: apply_bounds.rs  integrate.rs  iter.rs  iter_take_time_step.rs  loop.rs  loop_take_time_step.rs  mix.rs  simd.rs  take_time_step.rs
input-files/: projectile.dhall
src/: graphics.rs  lib.rs  main.rs  physics.rs  vec3.rs
src/physics/: common.rs  cubes.rs  spheres.rs
tests/: spheres.rs  vec3.rs
