[package]
name = "rustplay"
version = "0.1.0"
edition = "2021"
default-run = "rustplay"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bench = []

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true

[dependencies]
kiss3d = "0.32"
itertools = "0.10"
rand = "0.8"
log = "0.4.17"
env_logger = "0.9.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "take_time_step"
required-features = ["bench"]
harness = false

[[bench]]
name = "integrate"
required-features = ["bench"]
harness = false

[[bench]]
name = "apply_bounds"
required-features = ["bench"]
harness = false
