[package]
name = "rustplay"
version = "0.1.0"
edition = "2021"
default-run = "rustplay"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bench = []

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.optimized-debug]
inherits = "dev"
opt-level = 3

[profile.optimized-debug-max]
inherits = "dev"
opt-level = 3
strip = false
debug = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
kiss3d = "0.32"
itertools = "0.10"
rand = "0.8"
log = {version = "0.4.17", features = ["release_max_level_off"]}
env_logger = "0.9.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "take_time_step"
required-features = ["bench"]
harness = false

[[bench]]
name = "integrate"
required-features = ["bench"]
harness = false

[[bench]]
name = "apply_bounds"
required-features = ["bench"]
harness = false
